--- a/src/Components/Book Store/LoginSignup.css
+++ b/src/Components/Book Store/LoginSignup.css
@@ -1,10 +1,13 @@
 .container {
+    position: absolute;      /* Position relative to the parent container */
+    top: 15%;               /* Distance from the top */
+    right: 38%;             /* Distance from the right */
     width: 300px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
     border-radius: 10px;
-    background-color: #f5f5f5;
+    background-color: #f5f4ac;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
   
@@ -33,7 +36,7 @@
   
   .message {
     margin-top: 20px;
-    color: red;
+    color: rgb(0, 0, 0);
   }
   
   .toggleContainer {
