Separate jsx for login, signup and forgot password actions. Added more css styling to make it more stunning. More functionalities like Signup link and Forgot password link popup in the container bottom added.

--- a/src/Components/Book Store/LoginSignup.css
+++ b/src/Components/Book Store/LoginSignup.css
@@ -7,7 +7,7 @@
     padding: 20px;
     text-align: center;
     border-radius: 10px;
-    background-color: #f5f4ac;
+    background-color: #f3f3c9;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
   
