--- a/src/Components/Book Store/BookStore.css
+++ b/src/Components/Book Store/BookStore.css
@@ -162,6 +162,34 @@ h1 {
   animation: shrinkFadeOut 0.6s forwards;
 }
 
+.pagination-controls {  /* Pagination logic*/
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Add space above the pagination controls */
+  margin-bottom: 40px; /* Add space below the pagination controls */
+}
+
+.pagination-controls button {
+  margin: 0 5px; /* Add some space between the pagination buttons */
+  padding: 8px 12px;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.pagination-controls button.active {
+  font-weight: bold;
+  background-color: #4a4df8;
+  color: white;
+}
+
+.pagination-controls button:hover {
+  background-color: #d3d3d3; /* Optional hover effect for buttons */
+}
+
+
+
 @keyframes shrinkFadeOut {
   0% {
     transform: scale(1);
